5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4470/executions/1828_1649.log
== TEST (2019-06-12 14:34:02) 
-- CODE:
from numpy import*
v=input()
x=v.split(",")
i=0
for i in v:
	elif(v[i]==P):
		i=i+1
	elif(v[i]==C):
		i=i+1
	elif(v[i]==M):
		i=i+1
	elif(v[i]==V):
		i=i+1
	elif(v[i]==A):
		i=i+1
print(v)
-- ERROR:
File "XXXX", line 6
    elif(v[i]==P):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:34:04) 
-- CODE:
from numpy import*
v=input()
x=v.split(",")
i=0
for i in v:
	elif(v[i]==P):
		i=i+1
	elif(v[i]==C):
		i=i+1
	elif(v[i]==M):
		i=i+1
	elif(v[i]==V):
		i=i+1
	elif(v[i]==A):
		i=i+1
print(v)
-- ERROR:
File "XXXX", line 6
    elif(v[i]==P):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:34:06) 
-- CODE:
from numpy import*
v=input()
x=v.split(",")
i=0
for i in v:
	elif(v[i]==P):
		i=i+1
	elif(v[i]==C):
		i=i+1
	elif(v[i]==M):
		i=i+1
	elif(v[i]==V):
		i=i+1
	elif(v[i]==A):
		i=i+1
print(v)
-- EXECUTION TIME:
0.837787
-- ERROR:
  File "/home/codebench/codes/1828/1649/main.py", line 6
    elif(v[i]==P):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:35:15) 
-- CODE:
from numpy import*
v=input()
x=v.split(",")
i=0
for i in range(v):
	elif(v[i]==P):
		i=i+1
	elif(v[i]==C):
		i=i+1
	elif(v[i]==M):
		i=i+1
	elif(v[i]==V):
		i=i+1
	elif(v[i]==A):
		i=i+1
print(v)
-- ERROR:
File "XXXX", line 6
    elif(v[i]==P):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:35:52) 
-- CODE:
from numpy import*
v=input()
x=v.split(",")
i=0
for i in range(v):
	elif(v[i]==P):
		i=i+1
	elif(v[i]==C):
		i=i+1
	elif(v[i]==M):
		i=i+1
	elif(v[i]==V):
		i=i+1
	elif(v[i]==A):
		i=i+1
print(v)
-- ERROR:
File "XXXX", line 6
    elif(v[i]==P):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:35:56) 
-- CODE:
from numpy import*
v=input()
x=v.split(",")
i=0
for i in range(v):
	elif(v[i]==P):
		i=i+1
	elif(v[i]==C):
		i=i+1
	elif(v[i]==M):
		i=i+1
	elif(v[i]==V):
		i=i+1
	elif(v[i]==A):
		i=i+1
print(v)
-- ERROR:
File "XXXX", line 6
    elif(v[i]==P):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:35:56) 
-- CODE:
from numpy import*
v=input()
x=v.split(",")
i=0
for i in range(v):
	elif(v[i]==P):
		i=i+1
	elif(v[i]==C):
		i=i+1
	elif(v[i]==M):
		i=i+1
	elif(v[i]==V):
		i=i+1
	elif(v[i]==A):
		i=i+1
print(v)
-- ERROR:
File "XXXX", line 6
    elif(v[i]==P):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:35:56) 
-- CODE:
from numpy import*
v=input()
x=v.split(",")
i=0
for i in range(v):
	elif(v[i]==P):
		i=i+1
	elif(v[i]==C):
		i=i+1
	elif(v[i]==M):
		i=i+1
	elif(v[i]==V):
		i=i+1
	elif(v[i]==A):
		i=i+1
print(v)
-- ERROR:
File "XXXX", line 6
    elif(v[i]==P):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:35:56) 
-- CODE:
from numpy import*
v=input()
x=v.split(",")
i=0
for i in range(v):
	elif(v[i]==P):
		i=i+1
	elif(v[i]==C):
		i=i+1
	elif(v[i]==M):
		i=i+1
	elif(v[i]==V):
		i=i+1
	elif(v[i]==A):
		i=i+1
print(v)
-- ERROR:
File "XXXX", line 6
    elif(v[i]==P):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:35:57) 
-- CODE:
from numpy import*
v=input()
x=v.split(",")
i=0
for i in range(v):
	elif(v[i]==P):
		i=i+1
	elif(v[i]==C):
		i=i+1
	elif(v[i]==M):
		i=i+1
	elif(v[i]==V):
		i=i+1
	elif(v[i]==A):
		i=i+1
print(v)
-- ERROR:
File "XXXX", line 6
    elif(v[i]==P):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:35:57) 
-- CODE:
from numpy import*
v=input()
x=v.split(",")
i=0
for i in range(v):
	elif(v[i]==P):
		i=i+1
	elif(v[i]==C):
		i=i+1
	elif(v[i]==M):
		i=i+1
	elif(v[i]==V):
		i=i+1
	elif(v[i]==A):
		i=i+1
print(v)
-- ERROR:
File "XXXX", line 6
    elif(v[i]==P):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:35:57) 
-- CODE:
from numpy import*
v=input()
x=v.split(",")
i=0
for i in range(v):
	elif(v[i]==P):
		i=i+1
	elif(v[i]==C):
		i=i+1
	elif(v[i]==M):
		i=i+1
	elif(v[i]==V):
		i=i+1
	elif(v[i]==A):
		i=i+1
print(v)
-- ERROR:
File "XXXX", line 6
    elif(v[i]==P):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:35:58) 
-- CODE:
from numpy import*
v=input()
x=v.split(",")
i=0
for i in range(v):
	elif(v[i]==P):
		i=i+1
	elif(v[i]==C):
		i=i+1
	elif(v[i]==M):
		i=i+1
	elif(v[i]==V):
		i=i+1
	elif(v[i]==A):
		i=i+1
print(v)
-- ERROR:
File "XXXX", line 6
    elif(v[i]==P):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:35:58) 
-- CODE:
from numpy import*
v=input()
x=v.split(",")
i=0
for i in range(v):
	elif(v[i]==P):
		i=i+1
	elif(v[i]==C):
		i=i+1
	elif(v[i]==M):
		i=i+1
	elif(v[i]==V):
		i=i+1
	elif(v[i]==A):
		i=i+1
print(v)
-- ERROR:
File "XXXX", line 6
    elif(v[i]==P):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:35:58) 
-- CODE:
from numpy import*
v=input()
x=v.split(",")
i=0
for i in range(v):
	elif(v[i]==P):
		i=i+1
	elif(v[i]==C):
		i=i+1
	elif(v[i]==M):
		i=i+1
	elif(v[i]==V):
		i=i+1
	elif(v[i]==A):
		i=i+1
print(v)
-- ERROR:
File "XXXX", line 6
    elif(v[i]==P):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:35:58) 
-- CODE:
from numpy import*
v=input()
x=v.split(",")
i=0
for i in range(v):
	elif(v[i]==P):
		i=i+1
	elif(v[i]==C):
		i=i+1
	elif(v[i]==M):
		i=i+1
	elif(v[i]==V):
		i=i+1
	elif(v[i]==A):
		i=i+1
print(v)
-- ERROR:
File "XXXX", line 6
    elif(v[i]==P):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:35:59) 
-- CODE:
from numpy import*
v=input()
x=v.split(",")
i=0
for i in range(v):
	elif(v[i]==P):
		i=i+1
	elif(v[i]==C):
		i=i+1
	elif(v[i]==M):
		i=i+1
	elif(v[i]==V):
		i=i+1
	elif(v[i]==A):
		i=i+1
print(v)
-- ERROR:
File "XXXX", line 6
    elif(v[i]==P):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:35:59) 
-- CODE:
from numpy import*
v=input()
x=v.split(",")
i=0
for i in range(v):
	elif(v[i]==P):
		i=i+1
	elif(v[i]==C):
		i=i+1
	elif(v[i]==M):
		i=i+1
	elif(v[i]==V):
		i=i+1
	elif(v[i]==A):
		i=i+1
print(v)
-- ERROR:
File "XXXX", line 6
    elif(v[i]==P):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:35:59) 
-- CODE:
from numpy import*
v=input()
x=v.split(",")
i=0
for i in range(v):
	elif(v[i]==P):
		i=i+1
	elif(v[i]==C):
		i=i+1
	elif(v[i]==M):
		i=i+1
	elif(v[i]==V):
		i=i+1
	elif(v[i]==A):
		i=i+1
print(v)
-- ERROR:
File "XXXX", line 6
    elif(v[i]==P):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:36:00) 
-- CODE:
from numpy import*
v=input()
x=v.split(",")
i=0
for i in range(v):
	elif(v[i]==P):
		i=i+1
	elif(v[i]==C):
		i=i+1
	elif(v[i]==M):
		i=i+1
	elif(v[i]==V):
		i=i+1
	elif(v[i]==A):
		i=i+1
print(v)
-- ERROR:
File "XXXX", line 6
    elif(v[i]==P):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:36:00) 
-- CODE:
from numpy import*
v=input()
x=v.split(",")
i=0
for i in range(v):
	elif(v[i]==P):
		i=i+1
	elif(v[i]==C):
		i=i+1
	elif(v[i]==M):
		i=i+1
	elif(v[i]==V):
		i=i+1
	elif(v[i]==A):
		i=i+1
print(v)
-- ERROR:
File "XXXX", line 6
    elif(v[i]==P):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:36:01) 
-- CODE:
from numpy import*
v=input()
x=v.split(",")
i=0
for i in range(v):
	elif(v[i]==P):
		i=i+1
	elif(v[i]==C):
		i=i+1
	elif(v[i]==M):
		i=i+1
	elif(v[i]==V):
		i=i+1
	elif(v[i]==A):
		i=i+1
print(v)
-- ERROR:
File "XXXX", line 6
    elif(v[i]==P):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:36:01) 
-- CODE:
from numpy import*
v=input()
x=v.split(",")
i=0
for i in range(v):
	elif(v[i]==P):
		i=i+1
	elif(v[i]==C):
		i=i+1
	elif(v[i]==M):
		i=i+1
	elif(v[i]==V):
		i=i+1
	elif(v[i]==A):
		i=i+1
print(v)
-- ERROR:
File "XXXX", line 6
    elif(v[i]==P):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:36:01) 
-- CODE:
from numpy import*
v=input()
x=v.split(",")
i=0
for i in range(v):
	elif(v[i]==P):
		i=i+1
	elif(v[i]==C):
		i=i+1
	elif(v[i]==M):
		i=i+1
	elif(v[i]==V):
		i=i+1
	elif(v[i]==A):
		i=i+1
print(v)
-- ERROR:
File "XXXX", line 6
    elif(v[i]==P):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:36:01) 
-- CODE:
from numpy import*
v=input()
x=v.split(",")
i=0
for i in range(v):
	elif(v[i]==P):
		i=i+1
	elif(v[i]==C):
		i=i+1
	elif(v[i]==M):
		i=i+1
	elif(v[i]==V):
		i=i+1
	elif(v[i]==A):
		i=i+1
print(v)
-- ERROR:
File "XXXX", line 6
    elif(v[i]==P):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:36:02) 
-- CODE:
from numpy import*
v=input()
x=v.split(",")
i=0
for i in range(v):
	elif(v[i]==P):
		i=i+1
	elif(v[i]==C):
		i=i+1
	elif(v[i]==M):
		i=i+1
	elif(v[i]==V):
		i=i+1
	elif(v[i]==A):
		i=i+1
print(v)
-- ERROR:
File "XXXX", line 6
    elif(v[i]==P):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:36:02) 
-- CODE:
from numpy import*
v=input()
x=v.split(",")
i=0
for i in range(v):
	elif(v[i]==P):
		i=i+1
	elif(v[i]==C):
		i=i+1
	elif(v[i]==M):
		i=i+1
	elif(v[i]==V):
		i=i+1
	elif(v[i]==A):
		i=i+1
print(v)
-- ERROR:
File "XXXX", line 6
    elif(v[i]==P):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:36:02) 
-- CODE:
from numpy import*
v=input()
x=v.split(",")
i=0
for i in range(v):
	elif(v[i]==P):
		i=i+1
	elif(v[i]==C):
		i=i+1
	elif(v[i]==M):
		i=i+1
	elif(v[i]==V):
		i=i+1
	elif(v[i]==A):
		i=i+1
print(v)
-- ERROR:
File "XXXX", line 6
    elif(v[i]==P):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:36:02) 
-- CODE:
from numpy import*
v=input()
x=v.split(",")
i=0
for i in range(v):
	elif(v[i]==P):
		i=i+1
	elif(v[i]==C):
		i=i+1
	elif(v[i]==M):
		i=i+1
	elif(v[i]==V):
		i=i+1
	elif(v[i]==A):
		i=i+1
print(v)
-- ERROR:
File "XXXX", line 6
    elif(v[i]==P):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:36:32) 
-- CODE:
from numpy import*
v=input()
x=v.split(",")
i=0
for i in range(v):
	elif(x[i]==P):
		i=i+1
	elif(x[i]==C):
		i=i+1
	elif(x[i]==M):
		i=i+1
	elif(x[i]==V):
		i=i+1
	elif(x[i]==A):
		i=i+1
print(v)
-- ERROR:
File "XXXX", line 6
    elif(x[i]==P):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:36:34) 
-- CODE:
from numpy import*
v=input()
x=v.split(",")
i=0
for i in range(v):
	elif(x[i]==P):
		i=i+1
	elif(x[i]==C):
		i=i+1
	elif(x[i]==M):
		i=i+1
	elif(x[i]==V):
		i=i+1
	elif(x[i]==A):
		i=i+1
print(v)
-- ERROR:
File "XXXX", line 6
    elif(x[i]==P):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:36:36) 
-- CODE:
from numpy import*
v=input()
x=v.split(",")
i=0
for i in range(v):
	elif(x[i]==P):
		i=i+1
	elif(x[i]==C):
		i=i+1
	elif(x[i]==M):
		i=i+1
	elif(x[i]==V):
		i=i+1
	elif(x[i]==A):
		i=i+1
print(v)
-- EXECUTION TIME:
0.58003
-- ERROR:
  File "/home/codebench/codes/1828/1649/main.py", line 6
    elif(x[i]==P):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
